login view page (fix dark mode background)

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -573,7 +573,7 @@ header.sticky {
 }
 
 .login-reg-bg {
-    background: #f4f7f6 none repeat scroll 0 0;
+    /* background: #f4f7f6 none repeat scroll 0 0; */
     float: left;
     height: 100vh;
     position: relative;
@@ -582,7 +582,7 @@ header.sticky {
 
 .log-reg-area {
     background: #fff none repeat scroll 0 0;
-    box-shadow: 0 0 35px #e2e2e2;
+    box-shadow: 0 0 10px #e2e2e2;
     display: block;
     float: none;
     left: 50%;
